update of more cities

--- a/index.html
+++ b/index.html
@@ -82,18 +82,23 @@
   </div>
   <div class="stadt">
      <h2>Duisburg</h2>
+     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d79592.08951753467!2d6.697268871779461!3d51.43515113327857!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b8b97e3c0a133d%3A0x5a520093c38c6459!2zQXVzbMOkbmRlcmJlaMO2cmRlIER1aXNidXJnIFPDvGQ!5e0!3m2!1sen!2sde!4v1675601666738!5m2!1sen!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
   <div class="stadt">
      <h2>Düren</h2>
+     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2521.376354046631!2d6.4854585157109685!3d50.805665379525976!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bf684c0f43aad1%3A0xa4883861f55e3531!2sKreisverwaltung%20D%C3%BCren!5e0!3m2!1sen!2sde!4v1675601680870!5m2!1sen!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
   <div class="stadt">
      <h2>Düsseldorf</h2>
+     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2499.38244934761!2d6.822561315726079!3d51.2120299795877!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4171beb80c68c1d3%3A0x7f526a8d64f8479c!2sState%20capital%20Dusseldorf%20Municipal%20Immigration%20Office!5e0!3m2!1sen!2sde!4v1675601694130!5m2!1sen!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
   <div class="stadt">
      <h2>Erfurt</h2>
+     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2512.245244515754!2d11.035687315717245!3d50.974657379551154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a472b9246f9295%3A0x16f23176a97465e7!2sAusl%C3%A4nderbeh%C3%B6rde%3A%20Ausl%C3%A4nder-%20und%20Asylangelegenheiten!5e0!3m2!1sen!2sde!4v1675601707350!5m2!1sen!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
   <div class="stadt">
      <h2>Erlangen</h2>
+     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1293.1505343135427!2d11.001145917443848!3d49.5920717!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a1f8e77f6cc8e7%3A0x1b508d157b3385fb!2sLandratsamt%20Erlangen-H%C3%B6chstadt%3A%20Ausl%C3%A4nderamt%2C%20Verpflichtungserkl%C3%A4rungen%2C%20Ausgabe%20eAT!5e0!3m2!1sen!2sde!4v1675601725998!5m2!1sen!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
   <div class="stadt">
      <h2>Essen</h2>
